--- a/package.json
+++ b/package.json
@@ -28,17 +28,17 @@
         "@nestjs/microservices": "^9.3.9",
         "@nestjs/platform-express": "^9.0.0",
         "@nestjs/typeorm": "^9.0.1",
-        "nestjs-proto-gen-ts": "1.0.19",
+        "nestjs-proto-gen-ts": "^1.0.20",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.2.0"
     },
     "devDependencies": {
         "@nestjs/cli": "^9.0.0",
+        "@nestjs/config": "^2.2.0",
         "@nestjs/schematics": "^9.0.0",
         "@nestjs/testing": "^9.0.0",
         "@types/express": "^4.17.13",
         "@types/jest": "29.2.4",
-        "@nestjs/config": "^2.2.0",
         "@types/node": "18.11.18",
         "@types/supertest": "^2.0.11",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
